Updated a few files

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Portfolio Landing Page</title>
+    <title>Online Portfolio of TH</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel='stylesheet' href="./style.css">
-    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
       <div class="scroll-up-btn">
@@ -14,7 +13,7 @@
       <!-- Header -->
       <nav class="navbar">
         <div class="max-width">
-          <div class="logo"><a href="#"><span>AISTECHX</span><span>.com</span></a></div>
+          <div class="logo"><a href="#"><span>uTcHb</span><span>.com</span></a></div>
           <ul class="menu">
             <li><a href="#home" class="menu-btn"><strong>Home</strong></a></li>
             <li><a href="#about" class="menu-btn"><strong>About</strong></a></li>
@@ -34,8 +33,7 @@
         <div class="max-width">
           <div class="home-content">
             <div class="text-1">Hello, This is</div>
-            <div class="text-2">Akash Mahapatra</div>
-            <div class="text-3">And I'm a <span class="typing"></span></div>
+            <div class="text-2">Tasneem Halim</div>
             <a href="#">Hire me</a>
           </div>
         </div>
@@ -47,14 +45,14 @@
           <h2 class="title">About Me</h2>
           <div class="about-content">
             <div class="column left">
-              <img src="https://source.unsplash.com/626x626/?profile" alt="Profile Image 626x626">
+              <img src="LogoP.jpeg" alt="Profile Image">
             </div>
             <div class="column right">
-              <div class="text">I'm Akash and I'm a <span class="typing-2"></span></div>
-              <p>Seeking an entry-level opportunity with an esteemed organization where I can utilize my skills & enhance learning in the field of work. Capable of mastering new technologies.</p>
+              <div class="text">Hello, My name is Tasneem and I am looking for <span class="typing-2"></span></div>
+              <p>an entry-level opportunity with an esteemed organization where I can utilize my skills & enhance learning in the field of work. Capable of mastering new technologies.</p>
               <br>
-              <div class="text">Why Work With Me</div>
-              <p>I'm a great communicator & love to invest the necessary time to understand the customer's problem very well.</p>
+              <div class="text">Why am I a potential candidate?</div>
+              <p>Because, I believe I am great in communication and management and & invest enough time to analyze and execute customer's expectation.</p>
 
               <a href="#link" target="blank">Download CV</a>
             </div>
@@ -71,21 +69,21 @@
               <div class="box">
                 <i class="fas fa-laptop-code"></i>
                 <div class="text">Web Design</div>
-                <p>Your Next Web Developer, who is working in Shopify Dropshipping Stores, High Converting Ecommerce stores, Product Page also having Custom code, liquid template design.</p>
+                <p>TRAAAAAA LAAAAAAAAAAAAA LAAAAAAAAAAAAAAAAAAAA LAAAAAAAAAAAAAAAAAAAAA</p>
               </div>
             </div>
             <div class="card">
               <div class="box">
                 <i class="fas fa-user-secret"></i>
-                <div class="text">User Secret</div>
-                <p>I ensures that, there is no sensitive data included in the source code and are stored outside of the project folder. And all the data which is stored by User Secrets is not encrypted.</p>
+                <div class="text">Online Projects</div>
+                <p> FAAAAAAAAAAAA LAAAAAAAAAAAA LAAAAAAAAAAAAAAAAA LAAAAAAAAAAAAAAAAAAA LAAAAAAAAAAAAAAAAAAA</p>
               </div>
             </div>
             <div class="card">
               <div class="box">
                 <i class="fas fa-code"></i>
                 <div class="text">Apps Design</div>
-                <p>I encompasses both the user interface(UI) & user experience(UX). The overall style of the app, including things like the colour scheme, font selection, and the types of buttons and widgets which will use.</p>
+                <p> PAAAAAAAP PAAAAAA RAAAAAAAAAAAAA RAAAAAAAAAAA PAAAAAAAAAAAAAAAAA</p>
               </div>
             </div>
           </div>
@@ -99,11 +97,11 @@
           <div class="skills-content">
             <div class="column left">
 
-              <div class="text">INTERNSHIP</div>
+              <div class="text">EMPLOYMENT EXPERIENCE</div>
               <p>
-                <li class="intern">#Company Name "Where You work"</li>
-                <li class="intern">#Company Name "Where You work"</li>
-                <li class="intern">#Company Name "Where You work"</li>
+                <li class="intern">Right AT School</li>
+                <li class="intern">BASIS International School</li>
+                <li class="intern">Americorp Envisioneers</li>
               </p>
 
               <br>
@@ -232,7 +230,7 @@
           <div class="contact-content">
             <div class="column left">
               <div class="text">Get in Touch</div>
-              <p>Feel free to get in touch with me. I am always open to discussing new projects, creative ideas or opportunities to be a part of your visions. Email me with any questions or inquiries. I'll happy to answer your questions and set up a meeting with you.</p>
+              <p>Feel free to get in touch with me. I am always open to discussing new projects, creative ideas or opportunities to be a part of your visions. Please feel free to Email me with any questions or inquiries and I will be happy to answer them.</p>
               <div class="icons">
 
                 <a href="#">
@@ -240,7 +238,7 @@
                     <i class="fa-solid fa-user-large"></i>
                     <div class="info">
                       <div class="head">Name</div>
-                      <div class="sub-title"><a href="#" style="text-decoration: none; color: #333;"> Akash Mahapatra</a></div>
+                      <div class="sub-title"><a href="#" style="text-decoration: none; color: #333;"> Tasneem Halim</a></div>
                     </div>
                   </div>
                 </a>
@@ -249,7 +247,7 @@
                   <i class="fa-solid fa-location-dot"></i>
                   <div class="info">
                     <div class="head"> Address</div>
-                    <div class="sub-title"> ABC, 123 Lane, India</div>
+                    <div class="sub-title"> Kungsbron 2, 111 22 Stockholm, Sweden </div>
                   </div>
                 </div>
 
@@ -264,8 +262,8 @@
                 <div class="row">
                   <i class="bi bi-translate"></i>
                   <div class="info">
-                    <div class="head">Language Known</div>
-                    <div class="sub-title">Hindi, English, Odia, Bengali</div>
+                    <div class="head">Contact Information</div>
+                    <div class="sub-title">+46-10-458-53-70</div>
                   </div>
                 </div>
 
@@ -314,7 +312,7 @@
       <!-- Footer -->
       <footer>
         <span>
-          <a href="#"> Akash Mahapatra</a> | <span class="far fa-copyright"></span> 2022 All Rights Reserved. Privacy Policy
+          <a href="#"> Tasneem Halim </a> | <span class="far fa-copyright"></span> 2022 All Rights Reserved. Privacy Policy
         </span>
       </footer>
       <script src='https://kit.fontawesome.com/3b57a2a2a7.js'></script>
